Replace isBlank with isEmpty